# agent-eval

./: .gitignore  README.md  benchmark_results.json  benchmark_results_v2.json  pyproject.toml
agent_eval/: __init__.py  assertions.py  cli.py  consistency.py  cost.py  diff.py  judge.py  judge_prompts.py  jury.py  safety.py  trace.py
benchmarks/: benchmark_faithbench_deepseek.json  benchmark_fb_claude_v4.json  benchmark_fb_deepseek_v4.json  benchmark_fb_gpt4o_v4.json  benchmark_standard_results.json  fb_multi_model_results.json  halubench_balanced_results.json  run_benchmark.py  run_standard_benchmark.py
benchmarks/data/HaluBench/: test.parquet
tests/: test_cli.py  test_consistency.py  test_core.py  test_cost.py  test_diff.py  test_edge_cases.py  test_judge.py  test_jury.py  test_safety.py
